// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardPageComponent should not render the template if there is no user 1`] = `
<div
  id="root0"
  ng-version="19.2.9"
>
  <!--container-->
</div>
`;

exports[`DashboardPageComponent should render the summaries 1`] = `
<div
  id="root2"
  ng-version="19.2.9"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <app-frame>
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <!--container-->
          <app-user-header>
            <header
              class="flex flex-row items-center space-x-3"
            >
              <span
                class="h-8 w-8 rounded-full bg-blue-600"
                ng-reflect-ng-class="bg-blue-600"
              />
              <div
                class="w-full flex flex-row justify-between space-x-10"
              >
                <div
                  class="flex flex-col"
                >
                  <h2>
                     tit 
                  </h2>
                  <p
                    class="text-gray-600"
                  >
                     role 
                  </p>
                </div>
                <div
                  class="flex flex-col justify-end"
                >
                  <small
                    class="text-gray-600"
                  >
                    login
                  </small>
                  <time>
                    dat
                  </time>
                </div>
              </div>
            </header>
          </app-user-header>
          <app-summary-item-list>
            <div
              class="flex flex-row flex-wrap gap-5 w-full"
            >
              <app-summary-item>
                <div
                  class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
                >
                  <span
                    class="text-2xl"
                  >
                    📋
                  </span>
                  <div>
                    <h4
                      class="text-gray-700 font-medium"
                    >
                       DashboardPage.summary.activeOrder.title 
                    </h4>
                    <p
                      class="text-2xl font-semibold tracking-wider text-blue-600"
                      ng-reflect-ng-class="text-blue-600"
                    >
                      <!--container-->
                       2 
                      <!--container-->
                    </p>
                  </div>
                </div>
              </app-summary-item>
              <app-summary-item>
                <div
                  class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
                >
                  <span
                    class="text-2xl"
                  >
                    🌾
                  </span>
                  <div>
                    <h4
                      class="text-gray-700 font-medium"
                    >
                       DashboardPage.summary.totalArea.title 
                    </h4>
                    <p
                      class="text-2xl font-semibold tracking-wider text-green-600"
                      ng-reflect-ng-class="text-green-600"
                    >
                       DashboardPage.hectareQuantity 
                      <!--container-->
                      <!--container-->
                    </p>
                  </div>
                </div>
              </app-summary-item>
              <app-summary-item>
                <div
                  class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
                >
                  <span
                    class="text-2xl"
                  >
                    💰
                  </span>
                  <div>
                    <h4
                      class="text-gray-700 font-medium"
                    >
                       DashboardPage.summary.spending.title 
                    </h4>
                    <p
                      class="text-2xl font-semibold tracking-wider text-purple-600"
                      ng-reflect-ng-class="text-purple-600"
                    >
                       DashboardPage.moneyQuantity 
                      <!--container-->
                      <!--container-->
                    </p>
                  </div>
                </div>
              </app-summary-item>
              <app-summary-item>
                <div
                  class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
                >
                  <span
                    class="text-2xl"
                  >
                    ⏳
                  </span>
                  <div>
                    <h4
                      class="text-gray-700 font-medium"
                    >
                       DashboardPage.summary.pending.title 
                    </h4>
                    <p
                      class="text-2xl font-semibold tracking-wider text-yellow-600"
                      ng-reflect-ng-class="text-yellow-600"
                    >
                      <!--container-->
                       3 
                      <!--container-->
                    </p>
                  </div>
                </div>
              </app-summary-item>
              <!--container-->
            </div>
          </app-summary-item-list>
          <router-outlet />
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
</div>
`;

exports[`DashboardPageComponent should render the template correctly if there is a user 1`] = `
<div
  id="root1"
  ng-version="19.2.9"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <app-frame>
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <!--container-->
          <app-user-header>
            <header
              class="flex flex-row items-center space-x-3"
            >
              <span
                class="h-8 w-8 rounded-full bg-blue-600"
                ng-reflect-ng-class="bg-blue-600"
              />
              <div
                class="w-full flex flex-row justify-between space-x-10"
              >
                <div
                  class="flex flex-col"
                >
                  <h2>
                     tit 
                  </h2>
                  <p
                    class="text-gray-600"
                  >
                     role 
                  </p>
                </div>
                <div
                  class="flex flex-col justify-end"
                >
                  <small
                    class="text-gray-600"
                  >
                    login
                  </small>
                  <time>
                    dat
                  </time>
                </div>
              </div>
            </header>
          </app-user-header>
          <app-summary-item-list>
            <div
              class="flex flex-row flex-wrap gap-5 w-full"
            >
              <!--container-->
            </div>
          </app-summary-item-list>
          <router-outlet />
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
</div>
`;
